--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,14 @@
   "manifest_version": 2,
   "name": "SensCritiqueYoutubeEmbeddedListen",
   "description": "This extension allows to add a youtube embedded player to SensCritique.",
-  "version": "1.0",
+  "version": "1.1",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
   },
   "permissions": ["activeTab"]
 }
